src/index.css
@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: "Varela Round", sans-serif;
}

::-webkit-scrollbar {
  width: 5px;
  height: 4px;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: #80471c;
  border-radius: 50px;
}

